# QueryForge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  workload_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/fixtures/: small_table.csv
examples/: game_events.csv  trades.csv  users.csv
examples/schemas/: users.json
examples/workloads/: trades.yaml
fuzz/: fuzz_csv_parser.cpp
include/queryforge/: queryforge.hpp  version.hpp.in
include/queryforge/benchmark/: benchmark_stats.hpp
include/queryforge/cli/: compare_command.hpp  inspect_command.hpp  run_command.hpp
include/queryforge/core/: result.hpp  trade_event.hpp
include/queryforge/data/: csv_line_parser.hpp  csv_schema.hpp  data_loader.hpp  dataset_generator.hpp  table.hpp  workload.hpp
include/queryforge/query/: linear_scan.hpp  query_filter.hpp  strategy.hpp
include/queryforge/recommend/: recommendation.hpp
include/queryforge/report/: report.hpp
include/queryforge/util/: format.hpp  memory.hpp
packaging/homebrew/: queryforge.rb
packaging/winget/: queryforge.yaml
src/: main.cpp
src/benchmark/: benchmark_stats.cpp
src/cli/: compare_command.cpp  inspect_command.cpp  run_command.cpp
src/data/: csv_line_parser.cpp  csv_schema.cpp  data_loader.cpp  dataset_generator.cpp  table.cpp  workload.cpp
src/query/: linear_scan.cpp  query_filter.cpp  strategy.cpp
src/recommend/: recommendation.cpp
src/report/: report.cpp
src/util/: format.cpp  memory.cpp
tests/: smoke_test.cpp
tests/benchmark/: benchmark_stats_test.cpp
tests/cli/: regression_test.cpp
tests/data/: csv_line_parser_test.cpp  csv_schema_test.cpp  data_loader_test.cpp  dataset_generator_test.cpp
tests/query/: linear_scan_test.cpp  query_filter_test.cpp  sorted_index_test.cpp  strategy_test.cpp
tests/recommend/: recommendation_test.cpp
